fixed gap between icons and data wrapper

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -249,7 +249,7 @@ a {
 .tab-icon {
     width: 50px;
     height: 50px;
-    margin-top: auto;
+    vertical-align: bottom;
 }
 
 .critter-container {
